--- a/index.html
+++ b/index.html
@@ -1,5 +1,10 @@
 <!DOCTYPE html>
 <html lang="en-us">
+  
+  git clone https://github.com/marc3llo/vivianefutterknecht.github.io
+  cd vivianefutterknecht.github.io
+
+echo "Hello World" > index.html
   <head>
     <meta charset="UTF-8">
     <title>Kreativitaetstechniken by vivianefutterknecht</title>
